<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">SimpleInternationalization</string>
    <string name="nome">Name</string>
    <string name="media">Average</string>
    <string name="limpar">Clean</string>
    <string name="salvar">Save</string>
    <string name="nome_completo">Full Name</string>
    <string name="media_final">Final Average</string>
    <string name="campos_limpos">The entries have been deleted!</string>
    <string name="faltou_entrar_com_o_nome">The name can not be empty!</string>
    <string name="faltou_entrar_com_a_media">Missing Average input!</string>
    <string name="nome_valor">"Name: "</string>
    <string name="media_valor">"Average: "</string>
    <string name="valor_numerico_invalido">Invalid numeric value</string>
    <string name="a_media_informada_tem_um_valor_invalido">The entered average is invalid, it must be a value between 0 and 100</string>
    <string name="possui_bolsa">Has Scholarship</string>
    <string name="nao_possui_bolsa">No Scholarship</string>
    <string name="esquerda">Left</string>
    <string name="direita">Right</string>
    <string name="ambas">Both</string>
    <string name="faltou_preencher_a_mao_usada">Missing Hand Used input!</string>
    <string name="mao_usada_valor">"Used Hand: "</string>
    <string name="tipo">Type</string>
    <string name="mao_usada">Hand used</string>
    <string name="aluno">Student</string>
    <string name="monitor">Class Monitor</string>
    <string name="tutor">Tutor</string>
    <string name="professor">Teacher</string>
    <string name="coordenador">Coordinator</string>
    <string name="o_spinner_tipo_nao_possui_valores">The Type Spinner has no values</string>
    <string name="tipo_valor">"Type: "</string>
    <string name="logo_da_utfpr">UTFPR Logo</string>
    <string name="descricao">Android Development Course Example</string>
    <string name="autoria">Author: <a href ="http://lattes.cnpq.br/3956885446716361">Adroaldo Hygino Ferreira</a> </string>
    <string name="sobre">About</string>
    <string name="controle_de_pessoas">People control</string>
    <string name="cadastro">Register</string>
    <string name="adicionar">Add</string>
    <string name="cadastro_de_pessoas">People Registration</string>
    <string name="site_utfpr" translatable="false">www.utfpr.edu.br</string>
    <string name="email_contato" translatable="false"><u>adroaldoferreira@alunos.utfpr.edu.br</u></string>
    <string name="nenhum_aplicativo_para_abrir_paginas_web">No application available to open web pages!</string>
    <string name="nenhum_aplicativo_para_enviar_e_mail">No application available to send emails!</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="nova_pessoa">New Person</string>
    <string name="editar_pessoa">Edit Person</string>
    <string name="sugerir_tipo">Suggest Type</string>
    <string name="ordenacao">Ordering</string>
    <string name="restaurar_padroes">Restore Defaults</string>
    <string name="as_configuracoes_voltaram_para_o_padrao_de_instalacao">The settings have been restored to installation default!</string>
    <string name="nome_utfpr_por_extenso">FEDERAL UNIVERSITY TECHNOLOGIC - PARANÁ</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_apagar">Do you want do delete?\n\"%1$s\"</string>
    <string name="deseja_voltar_padroes">Do you want do restore defaults?</string>
    <string name="desfazer">Undo</string>
    <string name="alteracao_realizada">Data update done</string>
    <string name="as_entradas_foram_apagadas">The entries have been deleted!</string>
    <string name="erro_ao_tentar_inserir">Error trying to insert!</string>
    <string name="erro_ao_tentar_atualizar">Error trying to update!</string>
    <string name="erro_ao_tentar_excluir">Error trying to delete!</string>
    <string name="data_nascimento">Birthdate</string>
    <string name="faltou_entrar_com_data_nascimento">The birthdate cannot be empty!</string>
    <string name="idade_invalida">Age needs to be 1 to 65 years!</string>
    <string name="data_nascimento_valor">"Birthdate: "</string>
</resources>
